comparison fixed top z-index 12

--- a/src/styles/blocks/comparisons/comparisons.sass
+++ b/src/styles/blocks/comparisons/comparisons.sass
@@ -36,7 +36,7 @@
             width: 100%
             padding: 1rem 0
             background-color: $white
-            z-index: 8
+            z-index: 12
             box-shadow: 0px 2px 8px rgba($shadow, 0.25)
             +desktop
                 padding: 1.875rem 0
